--- a/cartridge/bm_s3_contentmanagement.properties
+++ b/cartridge/bm_s3_contentmanagement.properties
@@ -1,4 +1,4 @@
 ## cartridge.properties for cartridge bm_s3_contentmanagement
-#Fri Sep 21 15:12:10 EDT 2012
+#Fri Feb 08 16:39:03 EST 2013
 demandware.cartridges.bm_s3_contentmanagement.id=bm_s3_contentmanagement
 demandware.cartridges.bm_s3_contentmanagement.multipleLanguageStorefront=true
